@@ -10,6 +10,7 @@ import uk.gov.hmcts.et.common.model.ccd.Address;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.items.AddressLabelTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.DateListedTypeItem;
+import uk.gov.hmcts.et.common.model.ccd.items.DocumentTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.HearingTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.items.RepresentedTypeRItem;
 import uk.gov.hmcts.et.common.model.ccd.items.RespondentSumTypeItem;
@@ -24,6 +25,7 @@ import uk.gov.hmcts.et.common.model.ccd.types.HearingType;
 import uk.gov.hmcts.et.common.model.ccd.types.RepresentedTypeC;
 import uk.gov.hmcts.et.common.model.ccd.types.RepresentedTypeR;
 import uk.gov.hmcts.et.common.model.ccd.types.RespondentSumType;
+import uk.gov.hmcts.et.common.model.ccd.types.UploadedDocumentType;
 import uk.gov.hmcts.et.common.model.multiples.MultipleData;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.VenueAddressReaderService;
 
@@ -34,8 +36,8 @@ import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import static com.google.common.base.Strings.isNullOrEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ADDRESS_LABELS_PAGE_SIZE;
@@ -49,6 +51,7 @@ import static uk.gov.hmcts.ecm.common.model.helper.Constants.NEW_LINE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.NO;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.OUTPUT_FILE_NAME;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
+import static uk.gov.hmcts.et.common.model.ccd.items.DocumentTypeItem.fromUploadedDocument;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.Helper.nullCheck;
 
 @Slf4j
@@ -387,7 +390,7 @@ public class DocumentHelper {
                         && !respondentSumTypeItem.getValue().getRespondentName().equals(firstRespondentName))
                 .map(respondentSumTypeItem -> atomicInteger.getAndIncrement() + ". "
                         + respondentSumTypeItem.getValue().getRespondentName())
-                .collect(Collectors.toList());
+                .toList();
         sb.append("\"resp_others\":\"").append(nullCheck(String.join("\\n", respOthers))).append(NEW_LINE);
         return sb;
     }
@@ -405,7 +408,7 @@ public class DocumentHelper {
                         || YES.equals(respondentSumTypeItem.getValue().getResponseContinue())))
                 .map(respondentSumTypeItem -> (size > 1 ? atomicInteger.getAndIncrement() + ". " : "")
                         + getRespondentAddressET3(respondentSumTypeItem.getValue()))
-                .collect(Collectors.toList());
+                .toList();
         sb.append("\"resp_address\":\"").append(nullCheck(String.join("\\n", respAddressList)))
                 .append(NEW_LINE);
         return sb;
@@ -935,7 +938,7 @@ public class DocumentHelper {
                             && addressLabelTypeItem.getValue().getPrintLabel().equals(YES))
                     .filter(addressLabelTypeItem -> addressLabelTypeItem.getValue().getFullName() != null
                             || addressLabelTypeItem.getValue().getFullAddress() != null)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return selectedAddressLabels;
@@ -975,6 +978,24 @@ public class DocumentHelper {
     }
 
     /**
+     * Create a documentTypeItem.
+     * @param uploadedDocument document uploaded to DM store
+     * @param typeOfDocument type of document
+     * @return a document to be added to the doc collection
+     */
+    public static DocumentTypeItem createDocumenTypeItem(UploadedDocumentType uploadedDocument, String typeOfDocument) {
+        DocumentType documentType = DocumentType.builder()
+                .typeOfDocument(typeOfDocument)
+                .uploadedDocument(uploadedDocument)
+                .build();
+
+        DocumentTypeItem documentTypeItem = new DocumentTypeItem();
+        documentTypeItem.setValue(documentType);
+        documentTypeItem.setId(UUID.randomUUID().toString());
+        return documentTypeItem;
+    }
+
+    /**
      *  Filter documents that only the legal rep should be able to see.
      */
     public static void setLegalRepVisibleDocuments(CaseData caseData) {
@@ -994,5 +1015,18 @@ public class DocumentHelper {
         }
 
         return types.contains(typeOfDocument);
+    }
+
+    /**
+     * Create a new DocumentTypeItem, copy from uploadedDocumentType and update TypeOfDocument.
+     * @param uploadedDocumentType UploadedDocumentType to be added
+     * @param typeOfDocument String to update TypeOfDocument
+     * @return DocumentTypeItem
+     */
+    public static DocumentTypeItem createDocumentTypeItem(UploadedDocumentType uploadedDocumentType,
+                                                          String typeOfDocument) {
+        DocumentTypeItem documentTypeItem = fromUploadedDocument(uploadedDocumentType);
+        documentTypeItem.getValue().setTypeOfDocument(typeOfDocument);
+        return documentTypeItem;
     }
 }
