@@ -78,7 +78,7 @@ public final class MultiplesHelper {
                     .filter(caseId -> caseId.getValue().getEthosCaseReference() != null)
                     .map(caseId -> caseId.getValue().getEthosCaseReference())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
@@ -98,7 +98,7 @@ public final class MultiplesHelper {
                                     && !caseId.getValue().getEthosCaseReference().trim().equals(""))
                     .filter(distinctByValue(CaseIdTypeItem::getValue))
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
@@ -272,7 +272,7 @@ public final class MultiplesHelper {
             return multipleData.getSubMultipleCollection().stream()
                     .map(subMultipleTypeItem -> subMultipleTypeItem.getValue().getSubMultipleName())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
